syntax = "proto3";

option go_package = "storage";
option cc_enable_arenas = true;
option java_package = "io.stackrox.proto.storage";

package storage;

message TelemetryConfiguration {
    bool enabled = 1;
}
